--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
           <p class="section-subtitle">About me</p>
 
-          <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2>
+          <h2 class="h3 section-title">Who am I?</h2>
 
           <p class="section-text">
             Hi! I’m varchasv Arora , and I’m a a data analyst who has passion for identifying problems and creating unique and innovative solutions.I enjoy the process of turning ideas into reality using creative solutions.
@@ -243,7 +243,8 @@
           <div class="btn-group">
             <button class="btn btn-secondary">Hire me</button>
 
-            <button class="btn btn-primary">Download cv</button>
+            <a href="C:\Users\varch\OneDrive\Documents\Varchasv\Resume\Varchasv Arora Resume V4-July 2024 pdf.pdf" download="Varchasv_Arora_CV.pdf" class="btn btn-primary">Download CV</a>
+    
           </div>
 
         </div>
