--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="btn-group">
             <button class="btn btn-secondary">Hire me</button>
 
-            <a href="C:\Users\varch\OneDrive\Documents\Varchasv\Resume\Varchasv Arora Resume V4-July 2024 pdf.pdf" download="Varchasv_Arora_CV.pdf" class="btn btn-primary">Download CV</a>
+            <a href="./assets/Resume/Varchasv Arora Resume V4-July 2024 pdf.pdf" download="Varchasv_Arora_CV.pdf" class="btn btn-primary">Download CV</a>
     
           </div>
 
