--- a/index.html
+++ b/index.html
@@ -241,9 +241,8 @@
             and i aspire to work as a data analyst .
 
           <div class="btn-group">
-            <button class="btn btn-secondary">Hire me</button>
 
-            <a href="./assets/Resume/Varchasv Arora Resume V4-July 2024 pdf.pdf" download="Varchasv_Arora_CV.pdf" class="btn btn-primary">Download CV</a>
+            <a href="./assets/Resume/Varchasv Arora Resume V4-July 2024 pdf.pdf" download="Varchasv_Arora_Resume.pdf" class="btn btn-primary">Download CV</a>
     
           </div>
 
