--- a/index.html
+++ b/index.html
@@ -712,31 +712,14 @@
             <li class="contact-list-item">
 
               <div class="contact-item-icon">
-                <ion-icon name="location-outline"></ion-icon>
-              </div>
-
-              <div class="wrapper">
-                <h3 class="h4 contact-item-title">Address:</h3>
-
-                <address class="contact-info">
-                  941 Saqrqorish Road, alandalos, grnata, wa 47122-4194
-                </address>
-              </div>
-
-            </li>
-
-            <li class="contact-list-item">
-
-              <div class="contact-item-icon">
                 <ion-icon name="call-outline"></ion-icon>
               </div>
 
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Phone:</h3>
 
-                <a href="tel:01234567789" class="contact-info">(01) 234 567 789</a>
+                <a href="tel:+919560468123" class="contact-info">+919560468123</a>
 
-                <a href="tel:09765432200" class="contact-info">(09) 765 432 200</a>
               </div>
 
             </li>
@@ -750,9 +733,7 @@
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Email:</h3>
 
-                <a href="mailto:info@jack.com" class="contact-info">info@jack.com</a>
-
-                <a href="mailto:support@jack.com" class="contact-info">support@jack.com</a>
+                <a href="varchasvarora@gmail.com" class="contact-info">varchasvarora@gmail.com</a>
               </div>
 
             </li>
@@ -762,9 +743,9 @@
 
                 <li>
                   <a href="#" class="contact-social-link">
-                    <div class="tooltip">Facebook</div>
+                    <div class="tooltip">Instagram</div>
 
-                    <ion-icon name="logo-facebook"></ion-icon>
+                    <ion-icon name="logo-instagram"></ion-icon>
                   </a>
                 </li>
 
