--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
           <p class="section-subtitle">Contact</p>
 
-          <h2 class="h3 section-title">Have You Any Project? Please Drop a Message</h2>
+          <h2 class="h3 section-title">How to get in touch?</h2>
 
           <p class="section-text">
             Get in touch and let me know how i can help. Fill out the form and i’ll be in touch as soon as possible.
@@ -742,18 +742,10 @@
               <ul class="contac-social-list">
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://www.instagram.com/varchasv_arora/" class="contact-social-link">
                     <div class="tooltip">Instagram</div>
 
                     <ion-icon name="logo-instagram"></ion-icon>
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="contact-social-link">
-                    <div class="tooltip">Twitter</div>
-
-                    <ion-icon name="logo-twitter"></ion-icon>
                   </a>
                 </li>
 
@@ -766,12 +758,16 @@
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
-                    <div class="tooltip">Youtube</div>
+                  <a href="https://github.com/VarchasvArora" class="contact-social-link">
+                    <div class="tooltip">Github</div>
 
-                    <ion-icon name="logo-youtube"></ion-icon>
+                    <ion-icon name="logo-github"></ion-icon>
                   </a>
                 </li>
+
+                
+
+                
 
               </ul>
             </li>
@@ -862,7 +858,7 @@
 
       <p class="h1 logo">
         <a href="#">
-          Jack<span>.</span>
+          Varchasv<span>.</span>
         </a>
       </p>
 
