--- a/index.html
+++ b/index.html
@@ -236,9 +236,8 @@
           <h2 class="h3 section-title">Who am I?</h2>
 
           <p class="section-text">
-            Hi! I’m varchasv Arora , and I’m a a data analyst who has passion for identifying problems and creating unique and innovative solutions.I enjoy the process of turning ideas into reality using creative solutions.
-            I’m always curious about learning new skills, tools, and concepts.I did my enginnering in electronics and mba in business analytics from Thapar Institute of Engineering and Technology 
-            and i aspire to work as a data analyst .
+            I am a data analyst with a passion for uncovering insights from data. My background in electronics engineering and MBA in business analytics provides a strong foundation for analyzing complex problems 
+            and developing data-driven solutions. I am eager to contribute my skills to a role in data analysis, consultancy, or business analysis
 
           <div class="btn-group">
 
@@ -264,12 +263,10 @@
 
           <p class="section-subtitle">My skills</p>
 
-          <h2 class="h3 section-title">What My Programming Skills Included?</h2>
+          <h2 class="h3 section-title">What my  Skill set include</h2>
 
           <p class="section-text">
-            I develop simple, intuitive and responsive user interface that helps users get things done with less effort
-            and time
-            with those technologies.
+            My academic journey as an engineer and MBA has equipped me with a strong set of skills which include:
           </p>
 
           <div class="skills-toggle" data-toggle-box>
@@ -286,154 +283,115 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">HTML5</div>
+                <div class="tooltip">C/C++</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/html5.png" alt="HTML5 logo">
+                  <img src="./assets/images/ccplusplus.png" alt="cpp logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">CSS3</div>
+                <div class="tooltip">PYTHON</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/css3.png" alt="CSS3 logo">
+                  <img src="./assets/images/python.jpeg" alt="python logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">JavaScript</div>
+                <div class="tooltip">R</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/javascript.png" alt="JavaScript logo">
+                  <img src="./assets/images/rprog.jpeg" alt="R logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">TypeScript</div>
+                <div class="tooltip">SQL</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/typescript.png" alt="TypeScript logo">
+                  <img src="./assets/images/sql.png" alt=" logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">jQuery</div>
+                <div class="tooltip">EXCEL MODELLING</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/jquery.png" alt="jQuery logo">
+                  <img src="./assets/images/excel modelling.jpeg" alt=" logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Bootstrap</div>
+                <div class="tooltip">DATA VISUALISATION</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/bootstrap.png" alt="Bootstrap logo">
+                  <img src="./assets/images/dataviz.png" alt=" logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Angular</div>
+                <div class="tooltip">FINANCIAL ANALYSIS</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/angular.png" alt="Angular logo">
+                  <img src="./assets/images/financial analysis.png" alt=" logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">React</div>
+                <div class="tooltip">PORTFOLIO MANAGEMENT</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/react.png" alt="React logo">
+                  <img src="./assets/images/portfolio.png" alt=" logo">
                 </div>
               </div>
             </li>
 
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Vue</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/vue.png" alt="Vue logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Firebase</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/firebase.png" alt="Firebase logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">PugJs</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/pugjs.png" alt="PugJs logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">SASS</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/sass.png" alt="SASS logo">
-                </div>
-              </div>
-            </li>
-
+            
           </ul>
 
           <ul class="tools-list">
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Ajax</div>
+                <div class="tooltip">JUPYTER</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/ajax.png" alt="Ajax logo">
+                  <img src="./assets/images/jupyter.png" alt="jupyter logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Gulp</div>
+                <div class="tooltip">TABLEAU</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/gulp.png" alt="Gulp logo">
+                  <img src="./assets/images/tableu.png" alt="tableau logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Webpack</div>
+                <div class="tooltip">EXCEL</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/webpack.png" alt="Webpack logo">
+                  <img src="./assets/images/excel.jpeg" alt="excel logo">
                 </div>
               </div>
             </li>
@@ -448,25 +406,7 @@
               </div>
             </li>
 
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Npm</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/npm.png" alt="Npm logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Command Line</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/command.png" alt="Command Line logo">
-                </div>
-              </div>
-            </li>
+            
 
             <li>
               <div class="skill-card">
@@ -480,53 +420,24 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Trello</div>
+                <div class="tooltip">RSTUDIO</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/trello.png" alt="Trello logo">
+                  <img src="./assets/images/rstudio.png" alt="rstudio logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">ClickUp</div>
+                <div class="tooltip">JMP</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/clickup.png" alt="ClickUp logo">
+                  <img src="./assets/images/jmp.png" alt="jmp logo">
                 </div>
               </div>
             </li>
 
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Slack</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/slack.png" alt="Slack logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Photoshop</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/photoshop.png" alt="Photoshop logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Adobe XD</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/adobe-xd.png" alt="Adobe XD logo">
-                </div>
-              </div>
-            </li>
 
           </ul>
 
