--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <div class="tooltip">PYTHON</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/python.jpeg" alt="python logo">
+                  <img src="./assets/images/python.jpg" alt="python logo">
                 </div>
               </div>
             </li>
@@ -306,7 +306,7 @@
                 <div class="tooltip">R</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/rprog.jpeg" alt="R logo">
+                  <img src="./assets/images/rprog.jpg" alt="R logo">
                 </div>
               </div>
             </li>
@@ -326,7 +326,7 @@
                 <div class="tooltip">EXCEL MODELLING</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/excel modelling.jpeg" alt=" logo">
+                  <img src="./assets/images/excel modelling.jpg" alt=" logo">
                 </div>
               </div>
             </li>
@@ -391,7 +391,7 @@
                 <div class="tooltip">EXCEL</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/excel.jpeg" alt="excel logo">
+                  <img src="./assets/images/excel.jpg" alt="excel logo">
                 </div>
               </div>
             </li>
@@ -687,70 +687,7 @@
 
         </div>
 
-        <form action="" class="contact-form">
-
-          <div class="form-wrapper">
-
-            <label for="name" class="form-label">Name</label>
-
-            <div class="input-wrapper">
-
-              <input type="text" name="name" id="name" required placeholder="e.g John Doe" class="input-field">
-
-              <ion-icon name="person-circle"></ion-icon>
-
-            </div>
-
-          </div>
-
-          <div class="form-wrapper">
-
-            <label for="email" class="form-label">Email</label>
-
-            <div class="input-wrapper">
-
-              <input type="email" name="email" id="email" required placeholder="e.g johndoe@mail.com"
-                class="input-field">
-
-              <ion-icon name="mail"></ion-icon>
-
-            </div>
-
-          </div>
-
-          <div class="form-wrapper">
-
-            <label for="phone" class="form-label">Phone</label>
-
-            <div class="input-wrapper">
-
-              <input type="tel" name="phone" id="phone" required placeholder="Phone Number" class="input-field">
-
-              <ion-icon name="call"></ion-icon>
-
-            </div>
-
-          </div>
-
-          <div class="form-wrapper">
-
-            <label for="message" class="form-label">Message</label>
-
-            <div class="input-wrapper">
-
-              <textarea name="message" id="message" required placeholder="Write message..."
-                class="input-field"></textarea>
-
-              <ion-icon name="chatbubbles"></ion-icon>
-
-            </div>
-
-          </div>
-
-          <button type="submit" class="btn btn-primary">Send</button>
-
-        </form>
-
+       
       </section>
 
     </article>
