--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/varchasvinformal.png.jpg" alt="A man in a alice blue shirt with a thinking expression"
+          <img src="./assets/images/varchasvinformal.png.png" alt=""
             class="w-100">
         </figure>
 
